aria label is missing fix + dist

--- a/src/components/znkQuestionReport/templates/znkReport.template.html
+++ b/src/components/znkQuestionReport/templates/znkReport.template.html
@@ -69,6 +69,7 @@
                             <div translate=".OPINION"></div>
                         </div>
                         <md-button
+                                aria-label="{{'REPORT_POPUP.DONE' | translate}}"
                                 class="success success-green drop-shadow"
                                 ng-click="vm.cancel();">
                             <span translate=".DONE"></span>
