--- a/src/components/znkQuestionReport/templates/znkReport.template.html
+++ b/src/components/znkQuestionReport/templates/znkReport.template.html
@@ -19,7 +19,7 @@
                     <section ng-switch-when="false">
                         <div class="sub-title" translate=".SUB_TITLE"></div>
                         <form novalidate name="vm.reportForm" class="base-form" ng-submit="vm.sendFrom();">
-
+                            <div class="input-label">{{'REPORT_POPUP.MESSAGE_LABEL' | translate}}</div>
 							<textarea
                                     required autofocus
                                     id="report-textarea"
@@ -34,6 +34,7 @@
                                     translate=".REQUIRED_FIELD">
                             </label>
 
+                            <div class="input-label">{{'REPORT_POPUP.EMAIL_LABEL' | translate}}</div>
                             <input
                                     required
                                     type="email"
