--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -13,7 +13,10 @@
                           on-done="settings.onDone()"
                           actions="vm.btnSectionActions">
 </znk-exercise-btn-section>
-<znk-exercise-review-btn-section ng-if="vm.show" show-btn="vm.show">
+<!--<znk-exercise-review-btn-section ng-if="vm.show" show-btn="vm.show">
+
+</znk-exercise-review-btn-section>-->
+<znk-exercise-review-btn-section ng-if="true" show-btn="vm.show">
 
 </znk-exercise-review-btn-section>
 <znk-exercise-pager class="ng-hide show-opacity-animate"
