new live session

--- a/src/components/screenSharing/directives/screenSharing/screenSharing.template.html
+++ b/src/components/screenSharing/directives/screenSharing/screenSharing.template.html
@@ -14,7 +14,7 @@
             <!--<svg-icon name="screen-sharing-eye"></svg-icon>-->
         <!--</div>-->
     </div>
-    <div class="close-icon-wrapper" ng-click="$ctrl.onClose()">
-        <svg-icon name="screen-sharing-close"></svg-icon>
-    </div>
+    <!--<div class="close-icon-wrapper" ng-click="$ctrl.onClose()">-->
+        <!--<svg-icon name="screen-sharing-close"></svg-icon>-->
+    <!--</div>-->
 </div>
