--- a/src/components/znkExercise/core/template/znkExerciseReviewSectionBtnTemplate.html
+++ b/src/components/znkExercise/core/template/znkExerciseReviewSectionBtnTemplate.html
@@ -1,4 +1,4 @@
-<div class="btn-section">
+<div class="btn-section" ng-if="showBtn">
     <div class="review-btn-wrap show-opacity-animate ng-scope">
         <button class="review-btn">REVIEW</button>
     </div>
