--- a/src/components/activePanel/_activePanel.scss
+++ b/src/components/activePanel/_activePanel.scss
@@ -11,7 +11,7 @@ active-panel {
     }
     .active-panel {
         z-index: 9999;
-        width: 250px;
+        width: 300px;
         height: 40px;
         background-color: $bgColor21;
         border: 1px solid $bcColor11;
@@ -30,19 +30,15 @@ active-panel {
         }
         .flex-container {
             height: 100%;
-            display:flex;
+            display: flex;
             align-items: center;
             padding: 0 5px;
         }
         .flex-col {
-            &.callee-status,
-            &.callee-name,
-            &.call-controls {
-                padding: 5px;
-            }
             &.callee-status {
                 flex-basis: 5%;
-                text-align: center;
+                align-self: center;
+                margin: 0 3px;
                 .online-indicator {
                     display: inline-block;
                     background: $bgColor2;
@@ -66,9 +62,17 @@ active-panel {
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
+                text-align: left;
             }
             &.call-controls {
                 flex-basis: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                div {
+                    margin: 0 2px;
+                }
 
                 .show-other-screen {
                     &.disabled {
@@ -81,6 +85,7 @@ active-panel {
 
                 .show-other-screen,
                 svg-icon.share-my-screen {
+                    outline: none;
                     &.disabled,
                     &.disabled svg-icon {
                         cursor: default;
@@ -88,7 +93,6 @@ active-panel {
                     }
                 }
                 svg-icon.share-my-screen {
-                    float:left;
                     cursor: pointer;
                     width: 28px;
                     height: 28px;
@@ -107,13 +111,11 @@ active-panel {
 
                 svg-icon.active-panel-track-student-icon,
                 svg-icon.active-panel-track-teacher-icon {
-                    float:left;
                     cursor: pointer;
                     width: 28px;
                     height: 28px;
                     border-radius: 50%;
                     background-color: $bgColor3;
-                    margin-right: 7px;
                     svg {
                         width: 44%;
                         path {
@@ -123,13 +125,37 @@ active-panel {
                 }
 
                 call-btn {
-                    float: right;
-                    margin-left: 7px;
                     svg-icon {
                         &.etutoring-phone-icon {
                             width: 28px;
                             height: 28px;
                         }
+                    }
+                }
+
+                .seperator{
+                    width: 2px;
+                    height: 28px;
+                    background: $bcColor15;
+                }
+
+                .end-session-btn {
+                    @include text-style(14px, $fcColor2, Lato, $regularFontWeight, null, none);
+                    background-color: $bgColor1;
+                    padding: 0;
+                    margin: 0;
+                    min-height: 30px;
+                    min-width: 60px;
+                    line-height: 28px;
+                    border-radius: 15px;
+                    outline: none;
+                    cursor: pointer;
+                    &:not([disabled]):hover {
+                        background-color: $bgColor1;
+                        border: 1px solid $bcColor8;
+                    }
+                    span {
+                        text-transform: uppercase;
                     }
                 }
             }
@@ -147,4 +173,4 @@ active-panel {
             }
         }
     }
-}
+    }
