--- a/src/components/activePanel/activePanel.template.html
+++ b/src/components/activePanel/activePanel.template.html
@@ -16,39 +16,52 @@
             <div class="live-session-duration">&nbsp;</div>
         </div>
         <div class="call-controls flex-col">
-            <div ng-click="d.viewOtherUserScreen()"
-                 class="show-other-screen"
-                 disable-click-drv="d.shareScreenBtnsEnable"
-                 ng-class="{disabled: !d.shareScreenBtnsEnable}">
-                <ng-switch on="d.isTeacher">
-                    <svg-icon ng-switch-when="true"
-                              name="active-panel-track-student-icon"
-                              title="{{d.translatedStrings.SHOW_STUDENT_SCREEN}}">
+            <ng-switch class="share-screen-icon-wrap" on="d.shareScreenBtnsEnable">
+                <div class="active-share-screen" ng-switch-default>
+                    <div ng-click="d.viewOtherUserScreen()"
+                         class="show-other-screen"
+                         disable-click-drv="d.shareScreenBtnsEnable"
+                         ng-class="{disabled: !d.shareScreenBtnsEnable}">
+                        <ng-switch on="d.isTeacher">
+                            <svg-icon ng-switch-when="true"
+                                      name="active-panel-track-student-icon"
+                                      title="{{d.translatedStrings.SHOW_STUDENT_SCREEN}}">
+                            </svg-icon>
+                            <svg-icon ng-switch-default
+                                      name="active-panel-track-teacher-icon"
+                                      title="{{d.translatedStrings.SHOW_TEACHER_SCREEN}}">
+                            </svg-icon>
+                        </ng-switch>
+                    </div>
+
+                    <svg-icon disable-click-drv="d.shareScreenBtnsEnable"
+                              ng-class="{disabled: !d.shareScreenBtnsEnable}"
+                              ng-click="d.shareMyScreen()"
+                              name="active-panel-share-screen-icon"
+                              class="share-my-screen"
+                              title="{{d.translatedStrings.SHARE_MY_SCREEN}}">
                     </svg-icon>
-                    <svg-icon ng-switch-default
-                              name="active-panel-track-teacher-icon"
-                              title="{{d.translatedStrings.SHOW_TEACHER_SCREEN}}">
-                    </svg-icon>
-                </ng-switch>
-            </div>
+                </div>
 
-            <div><svg-icon disable-click-drv="d.shareScreenBtnsEnable"
-                          ng-class="{disabled: !d.shareScreenBtnsEnable}"
-                          ng-click="d.shareMyScreen()"
-                          name="active-panel-share-screen-icon"
-                          class="share-my-screen"
-                          title="{{d.translatedStrings.SHARE_MY_SCREEN}}">
-                </svg-icon></div>
+                <svg-icon ng-switch-when="false"
+                          class="end-share-screen"
+                          ng-class="{ 'isViewer' : d.shareScreenViewer }"
+                          ng-click="d.endScreenSharing()"
+                          name="active-panel-stop-sharing-icon"
+                          title="{{d.translatedStrings.END_SCREEN_SHARING}}">
+                </svg-icon>
+            </ng-switch>
 
-            <div><call-btn ng-model="d.callBtnModel"></call-btn></div>
+            <call-btn ng-model="d.callBtnModel"></call-btn>
 
-            <div class="seperator"></div>
-
-            <div><md-button class="end-session-btn"
+            <div class="end-session-wrap" ng-if="d.isTeacher">
+                <div class="seperator"></div>
+                <md-button class="end-session-btn"
                             aria-label="{{'ACTIVE_PANEL.END_SESSION' | translate}}"
                             ng-click="d.endSession()">
                 <span>{{'ACTIVE_PANEL.END_SESSION' | translate}}</span>
-            </md-button></div>
+                </md-button>
+            </div>
         </div>
     </div>
 </div>
