--- a/src/components/znkExercise/core/template/znkExerciseReviewSectionBtnTemplate.html
+++ b/src/components/znkExercise/core/template/znkExerciseReviewSectionBtnTemplate.html
@@ -1,5 +1,5 @@
 <div class="btn-section" ng-if="showBtn">
     <div class="review-btn-wrap show-opacity-animate ng-scope">
-        <button class="review-btn">REVIEW</button>
+        <button class="review-btn" ng-click="onReview()">REVIEW</button>
     </div>
 </div>
