--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -13,7 +13,7 @@
                           on-done="settings.onDone()"
                           actions="vm.btnSectionActions">
 </znk-exercise-btn-section>
-<znk-exercise-review-btn-section>
+<znk-exercise-review-btn-section setting="settings" on-review="settings.onReview()">
 
 </znk-exercise-review-btn-section>
 <znk-exercise-pager class="ng-hide show-opacity-animate"
