change popup to toaster

--- a/src/components/liveSession/main.scss
+++ b/src/components/liveSession/main.scss
@@ -6,6 +6,7 @@
 @import './components/liveSession/liveSession';
 @import './components/liveSessionBtn/liveSessionBtn';
 @import './components/liveSessionSubjectModal/liveSessionSubjectModal';
+@import './components/liveSessionToast/liveSessionToast';
 
 md-dialog {
     border-radius: 15px;
