--- a/src/components/znkExercise/core/template/znkExerciseDrv.html
+++ b/src/components/znkExercise/core/template/znkExerciseDrv.html
@@ -14,7 +14,7 @@
                           actions="vm.btnSectionActions">
 </znk-exercise-btn-section>
 <znk-exercise-review-btn-section
-                        setting="settings"
+                        settings="settings"
                         on-review="settings.onReview()">
 </znk-exercise-review-btn-section>
 <znk-exercise-pager class="ng-hide show-opacity-animate"
