Ofir/move live session (#461)
* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add znkLesson

* Add end session to znkSession

* Add end session to znkSession

* Add end session to znkSession

* Add end session to znkSession

* Add end session to znkSession

* Add end session to znkSession

* Add end session to znkSession

* Add end session to znkSession

* Add popu.info and update znkSession listener

* znkSession fix

* znkSession code review fix

* try to fix activePanel and znkSession demos

* changing activePanel for znkSession

* cleaning activePanel component
adding autoCall to calls component
add extend lesson time fn and modal

* cleaning activePanel component
adding autoCall to calls component
add extend lesson time fn and modal

dist

* dist

* dist

* inprove sessionBtn Component

* inprove sessionBtn Component

* fix bugs

* fix bugs + dist

* css fix + dist

* css fix + dist

* Make sure the active panel is visible while there's an active lesson, close it when the lesson closes

* Make sure the active panel is visible while there's an active lesson, close it when the lesson closes

* fix aria-label to button

* duplicate key in local-en.json

* duplicate key in local-en.json

* module results changes

* activePanel && shareScreen

* activePanel && shareScreen

* activePanel && shareScreen

* save

* activePanel && shareScreen

* save work

* save

* End Lesson - Close share screen / calls / active panel

* bug fix

* save

* save

* save work

* before merge

* save

* save work

* new live session

* new live session

* new live session

* new live session

* save work

* end screen sharing

* fixed testing

* end screen sharing

* end screen sharing

* save work

* save

* end screen sharing


--- a/src/components/screenSharing/directives/screenSharing/screenSharing.template.html
+++ b/src/components/screenSharing/directives/screenSharing/screenSharing.template.html
@@ -6,15 +6,15 @@
     </div>
     <div ng-switch-when="3"
          class="sharer-state-container">
-        <div class="square-side top"></div>
-        <div class="square-side right"></div>
-        <div class="square-side bottom"></div>
-        <div class="square-side left"></div>
-        <div class="eye-wrapper">
-            <svg-icon name="screen-sharing-eye"></svg-icon>
-        </div>
+        <!--<div class="square-side top"></div>-->
+        <!--<div class="square-side right"></div>-->
+        <!--<div class="square-side bottom"></div>-->
+        <!--<div class="square-side left"></div>-->
+        <!--<div class="eye-wrapper">-->
+            <!--<svg-icon name="screen-sharing-eye"></svg-icon>-->
+        <!--</div>-->
     </div>
-    <div class="close-icon-wrapper" ng-click="$ctrl.onClose()">
-        <svg-icon name="screen-sharing-close"></svg-icon>
-    </div>
+    <!--<div class="close-icon-wrapper" ng-click="$ctrl.onClose()">-->
+        <!--<svg-icon name="screen-sharing-close"></svg-icon>-->
+    <!--</div>-->
 </div>
