add znk-tooltip + dist

--- a/src/scss/imports/_colors.scss
+++ b/src/scss/imports/_colors.scss
@@ -78,6 +78,7 @@ $bcColor13 : #4f4d4d;
 $bcColor14 : #acacac;
 $bcColor15 : #e1e1e1;
 $bcColor16 : #c2c2c2;
+$bcColor17 : rgba(0,0,0,0.54);
 
 //background with transparency
 $tbgColor1: rgba(0,0,0,0.7);
