update calls tooltip + dist

--- a/src/components/calls/directives/callBtn/callBtn.template.html
+++ b/src/components/calls/directives/callBtn/callBtn.template.html
@@ -10,4 +10,7 @@
         class="etutoring-phone-icon"
         name="calls-etutoring-phone-icon">
     </svg-icon>
+    <md-tooltip znk-tooltip class="md-fab">
+        {{vm.tooltipTranslate}}
+    </md-tooltip>
 </button>
