--- a/src/components/popUp/main.scss
+++ b/src/components/popUp/main.scss
@@ -35,14 +35,13 @@
                     margin-right: -28.5px;
                     @include flex-middle;
 
-                    .exclamation-mark{
-                        svg{
-                            width: 8px;
-
-                            path{
-                                fill: $bgColor6;
-                            }
-                        }
+                    .exclamation-mark, .popup-exclamation-mark {
+                        svg {
+                          @include dimension(8px, auto);
+                          path {
+                            fill: $bgColor6;
+                          }
+                      }
                     }
 
                     .correct{
