znkTooltip Override Fix

--- a/src/components/znkTooltip/main.scss
+++ b/src/components/znkTooltip/main.scss
@@ -2,5 +2,6 @@
         '../../scss/imports/colors',
         '../../scss/imports/mixins';
 
+@import 'scss/angular-material-override';
 @import 'scss/_tooltip';
 
