[SAT Edu] When the educator watches the student screen - the orange Active Session border is hidden

--- a/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
+++ b/src/components/screenSharing/directives/screenSharing/_screen-sharing-drv.scss
@@ -5,10 +5,10 @@
     screen-sharing{
         .viewer-state-container{
             position: fixed;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
+            top: 5px;
+            right: 5px;
+            bottom: 5px;
+            left: 5px;
             background: $tbgColor7;
         }
     }
